--- a/src/assets/minecraft/lang/en_uk.json
+++ b/src/assets/minecraft/lang/en_uk.json
@@ -10,12 +10,5 @@
   "item.minecraft.netherite_pickaxe": "Dark Steel Pickaxe",
   "item.minecraft.netherite_hoe": "Dark Steel Hoe",
   "item.minecraft.netherite_shovel": "Dark Steel Shovel",
-  "item.minecraft.netherite_sword": "Dark Steel Sword",
-  "block.minecraft.infested_stone": "Silver Ore",
-  "block.minecraft.infested_cobblestone": "Platinum Ore",
-  "block.minecraft.infested_stone_bricks": "Sky-Steel Ore",
-  "block.minecraft.infested_mossy_stone_bricks": "Ruby Ore",
-  "block.minecraft.infested_cracked_stone_bricks": "Jade Ore",
-  "block.minecraft.infested_chiseled_stone_bricks": "Citrine Ore",
-  "block.minecraft.infested_deepslate": "Moonstone Ore"
+  "item.minecraft.netherite_sword": "Dark Steel Sword"
 }
